SplashController moved and renamed.
All dependancies were rectified given the changes.

--- a/src/application/Splash.fxml
+++ b/src/application/Splash.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SplashController">
+<StackPane fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SplashController">
    <children>
       <ImageView fitHeight="189.0" fitWidth="596.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Desktop/risc-v-logo.png" />
+            <Image url="@risc-v-logo.png" />
          </image></ImageView>
       <Pane prefHeight="200.0" prefWidth="200.0">
          <children>
