--- a/src/application/MainGUI.fxml
+++ b/src/application/MainGUI.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
   <children>
@@ -50,16 +47,7 @@
             <MenuItem mnemonicParsing="false" text="Unselect All" />
           </items>
         </Menu>
-            <Menu mnemonicParsing="false" text="Run">
-               <graphic>
-                  <MenuButton mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" text="MenuButton">
-                    <items>
-                      <MenuItem mnemonicParsing="false" text="Complie" />
-                      <MenuItem mnemonicParsing="false" text="Run breakpoint" />
-                    </items>
-                  </MenuButton>
-               </graphic>
-            </Menu>
+            <Menu mnemonicParsing="false" text="Run" />
             <Menu mnemonicParsing="false" text="Settings">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -78,52 +66,63 @@
         </Menu>
       </menus>
     </MenuBar>
-    <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <items>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0" style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
-              <font>
-                <Font size="18.0" fx:id="x1" />
-              </font>
-              <textFill>
-                <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
-              </textFill>
-            </Label>
-          </children>
-        </AnchorPane>
-        <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
-          <content>
-            <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-              <children>
-                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="View" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-              </children>
-            </AnchorPane>
-          </content>
-        </ScrollPane>
-        <AnchorPane>
-          <children>
-            <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-          </children>
-        </AnchorPane>
-      </items>
-    </SplitPane>
-    <HBox id="HBox" alignment="CENTER_LEFT" spacing="5.0" VBox.vgrow="NEVER">
-      <children>
-        <Label maxHeight="1.7976931348623157E308" maxWidth="-1.0" text="Left status" HBox.hgrow="ALWAYS">
-          <font>
-            <Font size="11.0" fx:id="x3" />
-          </font>
-          <textFill>
-            <Color blue="0.625" green="0.625" red="0.625" fx:id="x4" />
-          </textFill>
-        </Label>
-        <Pane prefHeight="-1.0" prefWidth="-1.0" HBox.hgrow="ALWAYS" />
-        <Label font="$x3" maxWidth="-1.0" text="Right status" textFill="$x4" HBox.hgrow="NEVER" />
-      </children>
-      <padding>
-        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-      </padding>
-    </HBox>
+      <AnchorPane prefHeight="568.0" prefWidth="900.0">
+         <children>
+            <SplitPane dividerPositions="0.5" layoutX="-2.0" prefHeight="563.0" prefWidth="900.0">
+              <items>
+                  <TabPane prefHeight="525.0" prefWidth="449.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab text="Editor">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="271.0" prefWidth="345.0">
+                                 <children>
+                                    <SplitPane layoutY="444.0" orientation="VERTICAL" prefHeight="84.0" prefWidth="445.0">
+                                       <items>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0">
+                                             <children>
+                                                <TextArea layoutX="100.0" layoutY="8.0" prefHeight="67.0" prefWidth="329.0" />
+                                                <Button layoutX="22.0" layoutY="28.0" mnemonicParsing="false" text="Clear" />
+                                             </children>
+                                          </AnchorPane>
+                                       </items>
+                                    </SplitPane>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                      <Tab text="Execute">
+                        <content>
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <SplitPane layoutY="368.0" orientation="VERTICAL" prefHeight="160.0" prefWidth="445.0">
+                                       <items>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0" />
+                                       </items>
+                                    </SplitPane>
+                                    <SplitPane orientation="VERTICAL" prefHeight="175.0" prefWidth="445.0">
+                                       <items>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="173.0" prefWidth="443.0" />
+                                       </items>
+                                    </SplitPane>
+                                    <SplitPane layoutY="173.0" orientation="VERTICAL" prefHeight="195.0" prefWidth="445.0">
+                                       <items>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0" />
+                                       </items>
+                                    </SplitPane>
+                                 </children>
+                              </AnchorPane>
+                        </content>
+                      </Tab>
+                    </tabs>
+                  </TabPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="427.0" prefWidth="529.0">
+                     <children>
+                        <Label alignment="CENTER" layoutX="112.0" layoutY="163.0" prefHeight="67.0" prefWidth="98.0" text="Register" textAlignment="CENTER" />
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
+         </children>
+      </AnchorPane>
   </children>
 </VBox>
