--- a/src/application/MainGUI.fxml
+++ b/src/application/MainGUI.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
@@ -66,22 +67,22 @@
         </Menu>
       </menus>
     </MenuBar>
-      <AnchorPane prefHeight="568.0" prefWidth="900.0">
+      <AnchorPane prefHeight="571.0" prefWidth="884.0">
          <children>
-            <SplitPane dividerPositions="0.5" layoutX="-2.0" prefHeight="563.0" prefWidth="900.0">
+            <SplitPane dividerPositions="0.5011135857461024" prefHeight="571.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <items>
-                  <TabPane prefHeight="525.0" prefWidth="449.0" tabClosingPolicy="UNAVAILABLE">
+                  <TabPane prefHeight="571.0" prefWidth="447.0" tabClosingPolicy="UNAVAILABLE">
                     <tabs>
                       <Tab text="Editor">
                         <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="271.0" prefWidth="345.0">
+                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="533.0" prefWidth="442.0">
                                  <children>
-                                    <SplitPane layoutY="444.0" orientation="VERTICAL" prefHeight="84.0" prefWidth="445.0">
+                                    <SplitPane layoutY="462.0" orientation="VERTICAL" prefHeight="74.0" prefWidth="457.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-10.0" AnchorPane.topAnchor="462.0">
                                        <items>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0">
+                                          <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                              <children>
-                                                <TextArea layoutX="100.0" layoutY="8.0" prefHeight="67.0" prefWidth="329.0" />
-                                                <Button layoutX="22.0" layoutY="28.0" mnemonicParsing="false" text="Clear" />
+                                                <TextArea layoutX="84.0" layoutY="11.0" prefHeight="52.0" prefWidth="357.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="84.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="11.0" />
+                                                <Button layoutX="14.0" layoutY="24.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="55.0" text="Clear" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="24.0" />
                                              </children>
                                           </AnchorPane>
                                        </items>
@@ -94,19 +95,19 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                  <children>
-                                    <SplitPane layoutY="368.0" orientation="VERTICAL" prefHeight="160.0" prefWidth="445.0">
+                                    <SplitPane layoutY="368.0" orientation="VERTICAL" prefHeight="184.0" prefWidth="446.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <items>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0" />
                                        </items>
                                     </SplitPane>
-                                    <SplitPane orientation="VERTICAL" prefHeight="175.0" prefWidth="445.0">
+                                    <SplitPane layoutY="183.0" orientation="VERTICAL" prefHeight="184.0" prefWidth="446.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="183.0">
                                        <items>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="173.0" prefWidth="443.0" />
                                        </items>
                                     </SplitPane>
-                                    <SplitPane layoutY="173.0" orientation="VERTICAL" prefHeight="195.0" prefWidth="445.0">
+                                    <SplitPane layoutY="367.0" orientation="VERTICAL" prefHeight="169.0" prefWidth="446.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="367.0">
                                        <items>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0" />
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="147.0" prefWidth="444.0" />
                                        </items>
                                     </SplitPane>
                                  </children>
@@ -115,11 +116,11 @@
                       </Tab>
                     </tabs>
                   </TabPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="427.0" prefWidth="529.0">
+                  <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <Label alignment="CENTER" layoutX="112.0" layoutY="163.0" prefHeight="67.0" prefWidth="98.0" text="Register" textAlignment="CENTER" />
+                        <Label alignment="CENTER" prefHeight="563.0" prefWidth="445.0" text="Register" textAlignment="CENTER" />
                      </children>
-                  </AnchorPane>
+                  </Pane>
               </items>
             </SplitPane>
          </children>
