--- a/src/application/MainGUI.fxml
+++ b/src/application/MainGUI.fxml
@@ -32,6 +32,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -40,7 +41,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<VBox fx:id="Main" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -74,7 +75,17 @@
             <MenuItem mnemonicParsing="false" text="Unselect All" />
           </items>
         </Menu>
-            <Menu mnemonicParsing="false" text="Run" />
+            <Menu mnemonicParsing="false" text="Run">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Assemble" />
+                  <MenuItem mnemonicParsing="false" text="Run">
+                     <graphic>
+                        <ImageView fitHeight="20.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true" />
+                     </graphic>
+                  </MenuItem>
+                  <MenuItem mnemonicParsing="false" text="Forward" />
+                  <MenuItem mnemonicParsing="false" text="Backward" />
+               </items></Menu>
             <Menu mnemonicParsing="false" text="Settings">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -116,7 +127,7 @@
                                     <VBox fx:id="editorPane" prefHeight="434.0" prefWidth="519.0" AnchorPane.bottomAnchor="103.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <children>
                                           <TextArea fx:id="textArea" prefHeight="407.0" prefWidth="519.0" VBox.vgrow="ALWAYS" />
-                                          <TextField VBox.vgrow="ALWAYS" />
+                                          <TextField fx:id="CursorStatusBar" VBox.vgrow="ALWAYS" />
                                        </children></VBox>
                                  </children>
                               </AnchorPane>
