--- a/src/application/ModuleExtension.fxml
+++ b/src/application/ModuleExtension.fxml
@@ -2,29 +2,34 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="385.0" prefWidth="514.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModuleExtension">
+<StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="385.0" prefWidth="514.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ModuleExtension">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="385.0" prefWidth="514.0">
          <children>
             <SplitPane dividerPositions="0.503731343283582" minHeight="-Infinity" minWidth="-Infinity" prefHeight="249.0" prefWidth="538.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="362.0" prefWidth="218.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#handleChoice" prefHeight="362.0" prefWidth="218.0">
                      <children>
                         <Label alignment="CENTER" layoutY="-1.0" prefHeight="24.0" prefWidth="264.0" style="-fx-background-color: blue;" text="Base" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
                            <font>
                               <Font name="Arial Black" size="13.0" />
                            </font>
                         </Label>
-                        <RadioButton layoutX="32.0" layoutY="118.0" mnemonicParsing="false" text="RV64I" />
-                        <RadioButton layoutX="32.0" layoutY="74.0" mnemonicParsing="false" text="RV32I" />
-                        <Button layoutX="103.0" layoutY="293.0" mnemonicParsing="false" text="Cancel" />
+                        <Button fx:id="cancel_button" layoutX="103.0" layoutY="293.0" mnemonicParsing="false" onAction="#handleButtonCancel" text="Cancel" />
+                        <ChoiceBox fx:id="base_choice" layoutX="59.0" layoutY="122.0" onMousePressed="#handleChoice" prefWidth="150.0" />
+                        <Text layoutX="55.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Base" textAlignment="CENTER" wrappingWidth="143.21875">
+                           <font>
+                              <Font name="Arial" size="22.0" />
+                           </font>
+                        </Text>
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -34,11 +39,11 @@
                               <Font name="Arial Black" size="13.0" />
                            </font>
                         </Label>
-                        <CheckBox layoutX="30.0" layoutY="74.0" mnemonicParsing="false" text="M" />
-                        <CheckBox layoutX="30.0" layoutY="108.0" mnemonicParsing="false" text="A" />
-                        <CheckBox layoutX="30.0" layoutY="181.0" mnemonicParsing="false" text="D" />
-                        <CheckBox layoutX="30.0" layoutY="144.0" mnemonicParsing="false" text="F" />
-                        <Button layoutX="106.0" layoutY="288.0" mnemonicParsing="false" text="Apply" />
+                        <CheckBox fx:id="M" layoutX="30.0" layoutY="74.0" mnemonicParsing="false" text="M" />
+                        <CheckBox fx:id="A" layoutX="30.0" layoutY="108.0" mnemonicParsing="false" text="A" />
+                        <CheckBox fx:id="D" layoutX="30.0" layoutY="181.0" mnemonicParsing="false" text="D" />
+                        <CheckBox fx:id="F" layoutX="30.0" layoutY="144.0" mnemonicParsing="false" text="F" />
+                        <Button fx:id="apply_button" layoutX="106.0" layoutY="288.0" mnemonicParsing="false" onAction="#handleButtonApply" text="Apply" />
                      </children>
                   </AnchorPane>
               </items>
