--- a/src/application/MainGUI.fxml
+++ b/src/application/MainGUI.fxml
@@ -39,7 +39,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="Main" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<VBox fx:id="Main" prefHeight="616.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -102,11 +102,11 @@
         </Menu>
       </menus>
     </MenuBar>
-      <StackPane prefHeight="572.0" prefWidth="445.0" VBox.vgrow="ALWAYS">
+      <StackPane prefHeight="599.0" prefWidth="918.0" VBox.vgrow="ALWAYS">
          <children>
-            <SplitPane dividerPositions="0.5" prefHeight="552.0" prefWidth="908.0">
+            <SplitPane dividerPositions="0.5">
               <items>
-                  <TabPane prefHeight="566.0" prefWidth="310.0" tabClosingPolicy="UNAVAILABLE" SplitPane.resizableWithParent="false">
+                  <TabPane prefHeight="582.0" prefWidth="526.0" tabClosingPolicy="UNAVAILABLE" SplitPane.resizableWithParent="false">
                     <tabs>
                       <Tab text="Editor">
                         <content>
@@ -135,20 +135,20 @@
                         <content>
                           <AnchorPane minHeight="0.0" minWidth="0.0">
                                  <children>
-                                    <SplitPane orientation="VERTICAL" prefHeight="181.0" prefWidth="519.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <SplitPane orientation="VERTICAL" prefHeight="181.0" prefWidth="519.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <items>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="71.0" prefWidth="225.0" />
                                        </items>
                                     </SplitPane>
-                                    <SplitPane layoutY="181.0" orientation="VERTICAL" prefHeight="186.0" prefWidth="519.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="181.0">
+                                    <SplitPane layoutY="181.0" orientation="VERTICAL" prefHeight="186.0" prefWidth="514.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="181.0">
                                        <items>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="173.0" prefWidth="443.0">
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="184.0" prefWidth="486.0" SplitPane.resizableWithParent="false">
                                              <children>
-                                                <ListView prefHeight="200.0" prefWidth="519.0" />
+                                                <ListView prefHeight="184.0" prefWidth="514.0" />
                                              </children></AnchorPane>
                                        </items>
                                     </SplitPane>
-                                    <SplitPane layoutY="367.0" orientation="VERTICAL" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="367.0">
+                                    <SplitPane layoutY="367.0" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="367.0">
                                        <items>
                                           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="173.0" prefWidth="598.0" />
                                        </items>
@@ -159,36 +159,40 @@
                       </Tab>
                     </tabs>
                   </TabPane>
-                  <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="566.0" prefWidth="376.0" tabClosingPolicy="UNAVAILABLE">
-                     <tabs>
-                        <Tab text="Ints">
-                           <content>
-                              <AnchorPane prefHeight="557.0" prefWidth="600.0">
-                                 <children>
-                                    <TableView fx:id="Table1" layoutX="-79.0" layoutY="1.0" prefHeight="526.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="1.0">
+                  <VBox prefHeight="582.0" prefWidth="320.0" SplitPane.resizableWithParent="false">
+                     <children>
+                        <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="444.0" tabClosingPolicy="UNAVAILABLE" translateX="1.0" translateY="1.0" translateZ="1.0">
+                           <tabs>
+                              <Tab text="Ints">
+                                 <content>
+                                    <TableView fx:id="Table1" prefHeight="541.0" prefWidth="419.0">
                                        <columns>
                                           <TableColumn fx:id="IntNameColumn" minWidth="100.0" prefWidth="100.0" resizable="false" text="REG_NAME" />
                                           <TableColumn fx:id="IntNumColumn" minWidth="100.0" prefWidth="75.0" text="REG_NUM" />
                                           <TableColumn fx:id="IntValueColumn" minWidth="100.0" prefWidth="75.0" text="VALUE" />
                                        </columns>
                                     </TableView>
-                                 </children>
-                              </AnchorPane>
-                           </content>
-                        </Tab>
-                        <Tab text="Floats">
-                           <content>
-                              <TableView fx:id="Table2" prefHeight="526.0" prefWidth="600.0">
-                                 <columns>
-                                    <TableColumn fx:id="FloatNameColumn" minWidth="100.0" prefWidth="100.0" resizable="false" text="REG_NAME" />
-                                    <TableColumn fx:id="FloatNumColumn" minWidth="100.0" prefWidth="75.0" text="REG_NUM" />
-                                    <TableColumn fx:id="FloatValueColumn" minWidth="100.0" prefWidth="75.0" text="VALUE" />
-                                 </columns>
-                              </TableView>
-                           </content>
-                        </Tab>
-                     </tabs>
-                  </TabPane>
+                                 </content>
+                              </Tab>
+                              <Tab text="Floats">
+                                 <content>
+                                    <AnchorPane prefHeight="539.0" prefWidth="371.0">
+                                       <children>
+                                          <TableView fx:id="Table2" prefHeight="542.0" prefWidth="376.0">
+                                             <columns>
+                                                <TableColumn fx:id="FloatNameColumn" minWidth="100.0" prefWidth="100.0" resizable="false" text="REG_NAME" />
+                                                <TableColumn fx:id="FloatNumColumn" minWidth="100.0" prefWidth="75.0" text="REG_NUM" />
+                                                <TableColumn fx:id="FloatValueColumn" minWidth="100.0" prefWidth="75.0" text="VALUE" />
+                                             </columns>
+                                          </TableView>
+                                       </children>
+                                    </AnchorPane>
+                                 </content>
+                              </Tab>
+                           </tabs>
+                        </TabPane>
+                     </children>
+                  </VBox>
               </items>
             </SplitPane>
          </children>
