--- a/src/application/MainGUI.fxml
+++ b/src/application/MainGUI.fxml
@@ -148,7 +148,7 @@
                                              <children>
                                                 <TableView fx:id="Table3" layoutX="155.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                   <columns>
-                                                    <TableColumn fx:id="MemoryValueColumn" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="75.0" text="C1" />
+                                                    <TableColumn fx:id="MemoryAddressColumn" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="75.0" text="MEM" />
                                                   </columns>
                                                 </TableView>
                                              </children>
